--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
     "description": "Spotify Web API client for Symfony 5, Symfony 6 and Symfony 7",
     "type": "symfony-bundle",
     "require": {
-        "php": "^7.3 || ^8.0 || ^8.2",
-        "jwilsson/spotify-web-api-php": "^5.0 || ^6.0",
-        "symfony/config": "^5.0 || ^6.0 || ^7.0",
-        "symfony/dependency-injection": "^5.0 || ^6.0 || ^7.0",
-        "symfony/http-kernel": "^5.0 || ^6.0 || ^7.0"
+        "php": "^7.3|^8.0|^8.1|^8.2",
+        "jwilsson/spotify-web-api-php": "^5.0|^6.0",
+        "symfony/config": "^5.0|^6.0|^7.0",
+        "symfony/dependency-injection": "^5.0|^6.0|^7.0",
+        "symfony/http-kernel": "^5.0|^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -15,12 +15,16 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.0 || ^6.0 || ^7.0"
+        "symfony/phpunit-bridge": "^5.0|^6.0|^7.0",
+        "phpunit/phpunit": "*"
     },
     "autoload-dev": {
         "psr-4": {
             "Calliostro\\SpotifyWebApiBundle\\Tests\\": "tests/"
         }
+    },
+    "scripts":{
+        "test": "phpunit tests"
     },
     "license": "MIT",
     "authors": [
