--- a/.travis.yml
+++ b/.travis.yml
@@ -1,62 +1,59 @@
 language: php
-sudo: false
+dist: jammy
+
 cache:
-  directories:
-    - $HOME/.composer/cache/files
-    - $HOME/symfony-bridge/.phpunit
+    directories:
+        - $HOME/.composer/cache/files
+        - $HOME/symfony-bridge/.phpunit
 
 env:
-  global:
-    - PHPUNIT_FLAGS="-v"
-    - SYMFONY_PHPUNIT_DIR="$HOME/symfony-bridge/.phpunit"
+    global:
+        - PHPUNIT_FLAGS="-v"
 
-matrix:
-  fast_finish: true
-  include:
-    # Minimum supported dependencies with the latest and oldest PHP version
-    - php: 8.2
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=disabled=1"
-    - php: 8.1
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=disabled=1"
-    - php: 8.0
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=disabled=1"
-    # Minimum PHP 7.4 / Symfony 5 throws "require(): read of xxx bytes failed with errno=13 Permission denied" when
-    # building kernel in test --> No minimum test possible, but bundle works.
-    # - php: 7.4
-    #  env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="disabled=1"
-    - php: 7.3
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="disabled=1"
+jobs:
+    fast_finish: true
+    include:
+        # Minimum-supported dependencies with the oldest supported PHP version
+        - php: 8.1
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
 
-      # Test the latest stable release
-    - php: 8.2
-      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
-    - php: 8.1
-      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
-    - php: 8.0
-      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
-    - php: 7.4
-      env: SYMFONY_DEPRECATIONS_HELPER="max[direct]=0"
-    - php: 7.3
-      env: SYMFONY_DEPRECATIONS_HELPER="max[direct]=0"
+        # Test the latest stable release with different PHP versions
+        - php: 8.1
+        - php: 8.2
+        - php: 8.3
+        - php: 8.4
 
-      # Latest commit to master
-    - php: 8.2
-      env: STABILITY="dev"
+        # Test with Symfony 6.4.x (current LTS branch)
+        - php: 8.2
+          env: SYMFONY_VERSION="^6.4"
+        - php: 8.3
+          env: SYMFONY_VERSION="^6.4"
 
-  allow_failures:
-    # Dev-master is allowed to fail.
-    - env: STABILITY="dev"
+        # Test with Symfony 7.x
+        - php: 8.2
+          env: SYMFONY_VERSION="^7.0"
+        - php: 8.3
+          env: SYMFONY_VERSION="^7.0"
+
+        # Latest commit to master
+        - php: 8.4
+          env: STABILITY="dev"
+
+    allow_failures:
+        # Dev master is allowed to fail.
+        - env: STABILITY="dev"
 
 before_install:
-  - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
-  - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
-  - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
+    - phpenv config-rm xdebug.ini || true
+    - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi
+    - if ! [ -z "$SYMFONY_VERSION" ]; then composer require --no-update symfony/config:${SYMFONY_VERSION} symfony/dependency-injection:${SYMFONY_VERSION} symfony/http-kernel:${SYMFONY_VERSION} symfony/security-bundle:${SYMFONY_VERSION}; fi
+    - if ! [ -z "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi
 
 install:
-  - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
+    - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
 
 script:
-  - composer validate --strict --no-check-lock
-  # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component and
-  # it helps with testing legacy code and deprecations (composer require symfony/phpunit-bridge)
-  - ./vendor/bin/simple-phpunit $PHPUNIT_FLAGS
+    - composer validate --strict --no-check-lock
+    # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component, and
+    # it helps with testing legacy code and deprecations (composer require symfony/phpunit-bridge)
+    - ./vendor/bin/simple-phpunit $PHPUNIT_FLAGS
