--- a/.travis.yml
+++ b/.travis.yml
@@ -22,31 +22,54 @@ jobs:
         - php: 8.2
         - php: 8.3
         - php: 8.4
+        - php: 8.5
 
         # Test with Symfony 6.4.x (current LTS branch)
         - php: 8.2
           env: SYMFONY_VERSION="^6.4"
         - php: 8.3
           env: SYMFONY_VERSION="^6.4"
+        - php: 8.4
+          env: SYMFONY_VERSION="^6.4"
 
-        # Test with Symfony 7.x
+        # Test with Symfony 7.x versions (7.4 is LTS)
         - php: 8.2
           env: SYMFONY_VERSION="^7.0"
         - php: 8.3
           env: SYMFONY_VERSION="^7.0"
+        - php: 8.2
+          env: SYMFONY_VERSION="^7.1"
+        - php: 8.3
+          env: SYMFONY_VERSION="^7.1"
+        - php: 8.3
+          env: SYMFONY_VERSION="^7.2"
+        - php: 8.3
+          env: SYMFONY_VERSION="^7.3"
+        - php: 8.4
+          env: SYMFONY_VERSION="^7.4"
+
+        # Test with upcoming Symfony 8.x
+        - php: 8.4
+          env: SYMFONY_VERSION="^8.0"
+        - php: 8.5
+          env: SYMFONY_VERSION="^8.0"
 
         # Latest commit to master
-        - php: 8.4
+        - php: 8.5
           env: STABILITY="dev"
 
     allow_failures:
         # Dev master is allowed to fail.
         - env: STABILITY="dev"
+        # PHP 8.5 is still in beta
+        - php: 8.5
+        # Symfony 8.0 might not be released yet
+        - env: SYMFONY_VERSION="^8.0"
 
 before_install:
     - phpenv config-rm xdebug.ini || true
     - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi
-    - if ! [ -z "$SYMFONY_VERSION" ]; then composer require --no-update symfony/config:${SYMFONY_VERSION} symfony/dependency-injection:${SYMFONY_VERSION} symfony/http-kernel:${SYMFONY_VERSION} symfony/security-bundle:${SYMFONY_VERSION}; fi
+    - if ! [ -z "$SYMFONY_VERSION" ]; then composer require --no-update symfony/config:${SYMFONY_VERSION} symfony/dependency-injection:${SYMFONY_VERSION} symfony/http-kernel:${SYMFONY_VERSION}; fi
     - if ! [ -z "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi
 
 install:
@@ -54,6 +77,6 @@ install:
 
 script:
     - composer validate --strict --no-check-lock
-    # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component, and
+    # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component and
     # it helps with testing legacy code and deprecations (composer require symfony/phpunit-bridge)
     - ./vendor/bin/simple-phpunit $PHPUNIT_FLAGS
