--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "name": "calliostro/spotify-web-api-bundle",
-    "description": "Spotify Web API client for Symfony 6.4 and Symfony 7",
+    "description": "Spotify Web API client for Symfony 6.4, Symfony 7 and Symfony 8",
     "type": "symfony-bundle",
     "require": {
         "php": "^8.1",
         "jwilsson/spotify-web-api-php": "^6.0",
-        "symfony/config": "^6.4|^7.0",
-        "symfony/dependency-injection": "^6.4|^7.0",
-        "symfony/http-kernel": "^6.4|^7.0"
+        "symfony/config": "^6.4|^7.0|^8.0",
+        "symfony/dependency-injection": "^6.4|^7.0|^8.0",
+        "symfony/http-kernel": "^6.4|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -15,8 +15,7 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^6.4|^7.0",
-        "phpunit/phpunit": "^10.0|^11.0"
+        "symfony/phpunit-bridge": "^6.4 || ^7.0 || ^8.0"
     },
     "autoload-dev": {
         "psr-4": {
@@ -24,7 +23,7 @@
         }
     },
     "scripts":{
-        "test": "phpunit tests"
+        "test": "vendor/bin/simple-phpunit"
     },
     "license": "MIT",
     "authors": [
