--- a/.travis.yml
+++ b/.travis.yml
@@ -73,10 +73,10 @@ before_install:
     - if ! [ -z "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi
 
 install:
+    - rm -f composer.lock
     - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
 
 script:
     - composer validate --strict --no-check-lock
-    # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component and
-    # it helps with testing legacy code and deprecations (composer require symfony/phpunit-bridge)
+    # Use simple-phpunit from symfony/phpunit-bridge which handles deprecations better
     - ./vendor/bin/simple-phpunit $PHPUNIT_FLAGS
