--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^6.4 || ^7.0 || ^8.0"
+        "symfony/phpunit-bridge": "^6.4|^7.0|^8.0"
     },
     "autoload-dev": {
         "psr-4": {
